<resources>
    <string name="app_name">Ha-Pla</string>
    <string name="appName">HA-PLA</string>
    <string name="haushalt">Haushalt</string>
    <string name="einkaufen">Einkaufen</string>
    <string name="putzen">Putzen</string>
    <string name="todo">To-Do</string>
    <string name="finanzvar">Variable Kosten</string>
    <string name="finanzfix">Fixkosten</string>
    <string name="willkommen">Willkommen bei HA-PLA</string>
    <string name="einloggen">Einloggen</string>
    <string name="registrieren">Registrieren</string>
    <string name="benutzer">Benutzername</string>
    <string name="passwort">Passwort</string>
    <string name="text_login">deinem persönlicher Haushaltsplaner</string>
    <string name="app_icon">App Icon</string>
    <string name="vorname">Vorname</string>
    <string name="nachname">Nachname</string>
    <string name="email">Email-Adresse</string>
    <string name="alreadyRegistered">Already have an Account? \n Click here to Login!</string>
    <string name="haushalterstellen">Erstelle einen Haushalt</string>
    <string name="haushaltname">Gib deinem Haushalt einen Namen</string>
    <string name="mitgliederhinzufuegen">Füge deine Mitbewohner hinzu:</string>
    <string name="add">hinzufügen</string>
    <string name="email_einladung">Mitglied hinzufuegen</string>
    <string name="mitgliederanzeigen">Mitglieder des Haushalt:</string>
    <string name="mitgliederinbestehendenhaushalt">weitere Mitglieder hinzufügen:</string>
    <string name="summer_var">Summe</string>
    <string name="eintrag_putzen">neuer Eintrag:</string>
    <string name="eintrag_einkaufen">Neuer Eintrag</string>
    <string name="eintrag_todo">Neuer Eintrag:</string>
    <string name="eintrag">Eintrag hinzufügen</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addEintrag">hinzufügen</string>
    <string name="bezeichnung">Bezeichnung</string>
</resources>