<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFD6CF">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/benutzer"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_login" />

    <TextView
        android:id="@+id/willkommen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/willkommen"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/text_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/einloggen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#4C7839"
        android:elevation="@dimen/box_elevation"
        android:onClick="LogIn"
        android:paddingLeft="@dimen/buttons_horizontal"
        android:paddingTop="@dimen/buttons_vertical"
        android:paddingRight="@dimen/buttons_horizontal"
        android:paddingBottom="@dimen/buttons_vertical"
        android:text="@string/einloggen"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/registrieren"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/passwort"
        android:inputType="textPassword"
        android:textColorHint="#757575"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/einloggen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="112dp"
        android:layout_height="105dp"
        android:contentDescription="@string/app_icon"
        android:foreground="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="@+id/willkommen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/registrieren"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#4C7839"
        android:elevation="@dimen/box_elevation"
        android:onClick="Registrierung"
        android:paddingLeft="@dimen/buttons_horizontal"
        android:paddingTop="@dimen/buttons_vertical"
        android:paddingRight="@dimen/buttons_horizontal"
        android:paddingBottom="@dimen/buttons_vertical"
        android:text="@string/registrieren"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/einloggen" />

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_login"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/willkommen" />

</androidx.constraintlayout.widget.ConstraintLayout>