<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFD6CF"
    android:elevation="@dimen/cardview_default_elevation">

    <TextView
        android:id="@+id/tVStartTitel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#4C7839"
        android:elevation="@dimen/box_elevation"
        android:gravity="center"
        android:paddingTop="@dimen/title_margin"
        android:paddingBottom="@dimen/title_margin"
        android:text="@string/appName"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonStartHaushalt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/box_gap_horizontal"
        android:layout_marginTop="@dimen/box_gap_vertical"
        android:layout_marginRight="@dimen/box_gap_horizontal"
        android:layout_marginBottom="@dimen/box_gap_vertical"
        android:background="@drawable/button_radius"
        android:duplicateParentState="false"
        android:elevation="@dimen/box_elevation"
        android:onClick="haushalt"
        android:shadowColor="#000000"
        android:text="@string/haushalt"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/ButtonStartPutzen"
        app:layout_constraintEnd_toStartOf="@+id/ButtonStartEinkaufen"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVStartTitel" />

    <Button
        android:id="@+id/ButtonStartEinkaufen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/box_gap_horizontal"
        android:layout_marginTop="@dimen/box_gap_vertical"
        android:layout_marginRight="@dimen/box_gap_horizontal"
        android:layout_marginBottom="@dimen/box_gap_vertical"
        android:background="@drawable/button_radius"
        android:elevation="@dimen/box_elevation"
        android:onClick="einkaufen"
        android:shadowColor="#000000"
        android:text="@string/einkaufen"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/ButtonStartToDo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonStartHaushalt"
        app:layout_constraintTop_toBottomOf="@+id/tVStartTitel" />

    <Button
        android:id="@+id/ButtonStartPutzen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/box_gap_horizontal"
        android:layout_marginTop="@dimen/box_gap_vertical"
        android:layout_marginRight="@dimen/box_gap_horizontal"
        android:layout_marginBottom="@dimen/box_gap_vertical"
        android:background="@drawable/button_radius"
        android:duplicateParentState="false"
        android:elevation="@dimen/box_elevation"
        android:onClick="putzen"
        android:shadowColor="#000000"
        android:text="@string/putzen"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/ButtonStartFinanzVar"
        app:layout_constraintEnd_toStartOf="@+id/ButtonStartToDo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStartHaushalt" />

    <Button
        android:id="@+id/ButtonStartToDo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/box_gap_horizontal"
        android:layout_marginTop="@dimen/box_gap_vertical"
        android:layout_marginRight="@dimen/box_gap_horizontal"
        android:layout_marginBottom="@dimen/box_gap_vertical"
        android:background="@drawable/button_radius"
        android:duplicateParentState="false"
        android:elevation="@dimen/box_elevation"
        android:onClick="todo"
        android:shadowColor="#000000"
        android:text="@string/todo"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/ButtonStartFinanzFix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ButtonStartPutzen"
        app:layout_constraintTop_toBottomOf="@+id/ButtonStartEinkaufen" />

    <Button
        android:id="@+id/ButtonStartFinanzVar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/box_gap_horizontal"
        android:layout_marginTop="@dimen/box_gap_vertical"
        android:layout_marginRight="@dimen/box_gap_horizontal"
        android:layout_marginBottom="@dimen/box_gap_vertical"
        android:background="@drawable/button_radius"
        android:duplicateParentState="false"
        android:elevation="@dimen/box_elevation"
        android:onClick="varKosten"
        android:shadowColor="#000000"
        android:text="@string/finanzvar"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ButtonStartFinanzFix"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonStartPutzen" />

    <Button
        android:id="@+id/ButtonStartFinanzFix"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/box_gap_horizontal"
        android:layout_marginTop="@dimen/box_gap_vertical"
        android:layout_marginRight="@dimen/box_gap_horizontal"
        android:layout_marginBottom="@dimen/box_gap_vertical"
        android:background="@drawable/button_radius"
        android:duplicateParentState="false"
        android:elevation="@dimen/box_elevation"
        android:onClick="fixKosten"
        android:shadowColor="#000000"
        android:text="@string/finanzfix"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ButtonStartFinanzVar"
        app:layout_constraintTop_toBottomOf="@+id/ButtonStartToDo" />
</androidx.constraintlayout.widget.ConstraintLayout>